fix: support align toolbar by bottom (#1768)

--- a/projects/editor/components/toolbar-host/toolbar-host.style.less
+++ b/projects/editor/components/toolbar-host/toolbar-host.style.less
@@ -1,5 +1,4 @@
 [tuiToolbarHost] {
-    position: relative;
     display: block;
     isolation: isolate;
 }
